We add control for the login functionality

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,5 @@
+We have to create a toolbar like the one in https://auth0.com/blog/creating-beautiful-apps-with-angular-material/
+
 componentless route.
 
 const routes: Routes = [
