We add the JWT interceptor in the HttpRequests

--- a/TODO.txt
+++ b/TODO.txt
@@ -32,3 +32,8 @@ const routes: Routes = [
         ...
      ]
    }
+
+Create interceptor response when the token is expired
+https://medium.com/@ryanchenkie_40935/angular-authentication-using-the-http-client-and-http-interceptors-2f9d1540eb8
+
+// Refactorizar auth.guard
